inventory-api-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: inventory-api-deployment 
  labels: 
    app: inventory-api 
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: inventory-api 
  template: 
    metadata: 
      labels: 
        app: inventory-api 
    spec: 
      containers: 
      - name: inventory-api-container 
        image: localhost:32000/inventory-api:v1 
        ports: 
        - containerPort: 5000
