softcon-deployment-canary.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: softcon-deployment-canary
  labels: 
    app: softcon
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: softcon
      version: v2.0.0
  template: 
    metadata: 
      labels: 
        app: softcon 
        version: v2.0.0
    spec: 
      containers: 
      - name: softcon-container
        image: localhost:32000/softcon:v1 
        ports: 
        - containerPort: 5000
