softcon-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: softcon-deployment 
  labels: 
    app: softcon
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: softcon
  template: 
    metadata: 
      labels: 
        app: softcon 
    spec: 
      containers: 
      - name: softcon-container
        image: localhost:32000/softcon2:v1 
        ports: 
        - containerPort: 5000
