softcon-loadbalance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: softcon-loadbalance-service
spec:
  selector:
    app: softcon
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
  clusterIP: 10.152.183.3
  type: LoadBalancer
