softcon-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: softcon-nodeport-service
  labels:
    app: softcon
spec:
  type: NodePort
  selector:
    app: softcon
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8081
      targetPort: 5000
