softcon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: softcon-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
  selector:
    app: softcon11
