softcon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: softcon-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: softcon
      port:
        number: 8081
  rules:
    - host: softcon.com
