softcon-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: softcon-ingress
spec:
  rules:
    - host: softcon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: softcon-loadbalance-service
                port:
                  number: 8081
